# parallel_system_architecture

./: .gitignore  CMakeLists.txt  README.md
docs/: LW1.docx
lab1/: CMakeLists.txt  README.md  lab1.cpp  matrix_multiplication.h  mpi_init.h  timer.h
lab2/: CMakeLists.txt  lab2.cpp  quick_sort.h  shell_sort.h
lab3/: CMakeLists.txt  lab3.cpp  linear_quatuions_jakobi.h  mpi_init.h
lab4/: CMakeLists.txt  gauss_method.h  lab4.cpp
lab5/: CMakeLists.txt  lab5.cpp  square_root_method.h
