cmake_minimum_required(VERSION 3.17)
project(parallel_system_architecture)

set(CMAKE_CXX_STANDARD 14)

include_directories(lab1)
include_directories(lab2)
include_directories(lab3)
include_directories(lab4)
include_directories(lab5)

add_subdirectory(lab1)
add_subdirectory(lab2)
add_subdirectory(lab3)
add_subdirectory(lab4)
add_subdirectory(lab5)